feat: finalize release hardening and dashboard history